--- a/src/app/main/content/contacts/contacts.component.html
+++ b/src/app/main/content/contacts/contacts.component.html
@@ -31,7 +31,10 @@
     </div>
     <div class="contacts">
         <div class="headline">
-            <h1>Contacts</h1>
+            <div>
+                <h1>Contacts</h1>
+                <img class="arrow_left" src="assets/img/icons/arrow_left.svg" alt="">
+            </div>
             <img src="assets/img/icons/or_icon.svg" />
             <p>Better with a team</p>
         </div>
