added: header responsive. refactoring: header scss

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,6 @@
 <section>
   <div class="header_left">
+    <img class="responsive_header_logo" src="./../../../assets/img/icons/logo_desktop.svg" alt="">
     <h1>Kanban Project Management Tool</h1>
   </div>
   <div class="header_right">
@@ -18,6 +19,7 @@
       class="header_overlay"
     >
       <div class="inner_overlay">
+        <a class="burger_help_link" href="">Help</a>
         <a href="">Legal Notice</a>
         <a href="">Privacy Policy</a>
         <a href="">Log out</a>
