overlay background visibility

--- a/src/app/main/content/contacts/overlay/overlay.component.html
+++ b/src/app/main/content/contacts/overlay/overlay.component.html
@@ -1,3 +1,4 @@
+<div class="backdrop" [ngClass]="{ 'show': isOpen }" (click)="closeOverlay()"></div>
 <div class="dialog-container" [ngClass]="{ show: isOpen }">
   <div class="dialog-left">
     <button class="close-btn-mobile" (click)="closeOverlay()">
