--- a/src/app/main/content/contacts/contacts.component.html
+++ b/src/app/main/content/contacts/contacts.component.html
@@ -39,6 +39,7 @@
         
             <img src="assets/img/icons/or_icon.svg" />
             <p>Better with a team</p>
+            <div class="border_blue"></div>
         </div>
         @if(selectedContact) {
             <!-- <img class="arrow_left" src="assets/img/icons/arrow_left.svg" (click)="selectContact(selectedContact); mobileDisplay()"> -->
