First attempt: different display regarding create and edit overlay

--- a/src/app/main/content/contacts/contacts.component.html
+++ b/src/app/main/content/contacts/contacts.component.html
@@ -1,95 +1,123 @@
 <section>
-    <div class="contact-list">
-        <div class="list">
-            <button class="add-new-contact" (click)="openOverlay()">
-                <span>Add new Contact</span>
-                <img class="person_add_icon" src="assets/img/icons/person_add_icon.svg" alt="" />
-            </button>
-            @for (group of contactService.getGroupedContacts() | keyvalue; track $index) {
-            <div class="single-contact">
-                <div class="letter">
-                    {{ group.key }}
-                </div>
-                @for (contact of group.value; track $index) {
-                <div class="single-contact-container" (click)="selectContact(contact); mobileDisplay()"
-                    [class.active]="selectedContact?.id === contact.id">
-                    <div class="profile_badge"
-                        [ngStyle]="{ 'background-color': getBadgeColor(getIndexInFullList(contact)) }">
-                        {{ contact.initials }}
-                    </div>
-                    <div class="info">
-                        <p class="name">{{ contact.name }}</p>
-                        <a class="email">{{ contact.email }}</a>
-                    </div>
-                </div>
-                }
-            </div>
-            }
+  <div class="contact-list">
+    <div class="list">
+      <button class="add-new-contact" (click)="openOverlay('add')">
+        <span>Add new Contact</span>
+        <img
+          class="person_add_icon"
+          src="assets/img/icons/person_add_icon.svg"
+          alt=""
+        />
+      </button>
+      @for (group of contactService.getGroupedContacts() | keyvalue; track
+      $index) {
+      <div class="single-contact">
+        <div class="letter">
+          {{ group.key }}
         </div>
-    </div>
-    <div class="contacts" [class.isShown]="isShown">
-        <div class="headline">
-           
-            <div>
-                <h1>Contacts</h1>
-                @if(selectedContact) {
-                <img class="arrow_left" src="assets/img/icons/arrow_left.svg" (click)="selectContact(selectedContact); mobileDisplay()">
-                }
-            </div>
-        
-            <img src="assets/img/icons/or_icon.svg" />
-            <p>Better with a team</p>
-            <div class="border_blue"></div>
-        </div>
-        @if(selectedContact) {
-            <!-- <img class="arrow_left" src="assets/img/icons/arrow_left.svg" (click)="selectContact(selectedContact); mobileDisplay()"> -->
-        <div class="contact_content" [ngClass]="{'show': showContactContent}">
-            <div class="contact_content_head">
-                <div class="contact_profile_badge"
-                    [ngStyle]="{ 'background-color': getBadgeColor(getIndexInFullList(selectedContact)) }">
-                    {{ selectedContactInitials }}
-                </div>
-                <div class="contact_name_section">
-                    <p class="name"> {{ selectedContact.name }}</p>
-                    <div class="editing_section">
-                        <div (click)="updateContact()" class="edit">
-                            <img class="pencil_icon" src="assets/img/icons/pencil_icon.svg">
-                            <img class="pencil_icon_hover_blue" src="assets/img/icons/pencil_icon_hover_blue.svg">
-                            <p>Edit</p>
-                        </div>
-
-                        <div (click)="deleteContact()" class="delete">
-                            <img class="trash_icon" src="assets/img/icons/trash_icon.svg">
-                            <img class="trash_icon_hover_blue" src="assets/img/icons/trash_icon_hover_blue.svg">
-                            <p>Delete</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="contact_detail_section">
-                <p class="information_headline">Contact Information</p>
-                <div class="information">
-                    <p class="email_headline">Email</p>
-                    <p class="email">{{ selectedContact.email }}</p>
-                    <p class="phone_headline">Phone</p>
-                    <p class="phone">{{ selectedContact.phone }}</p>
-                </div>
-            </div>
+        @for (contact of group.value; track $index) {
+        <div
+          class="single-contact-container"
+          (click)="selectContact(contact); mobileDisplay()"
+          [class.active]="selectedContact?.id === contact.id"
+        >
+          <div
+            class="profile_badge"
+            [ngStyle]="{
+              'background-color': getBadgeColor(getIndexInFullList(contact))
+            }"
+          >
+            {{ contact.initials }}
+          </div>
+          <div class="info">
+            <p class="name">{{ contact.name }}</p>
+            <a class="email">{{ contact.email }}</a>
+          </div>
         </div>
         }
+      </div>
+      }
     </div>
+  </div>
+  <div class="contacts" [class.isShown]="isShown">
+    <div class="headline">
+      <div>
+        <h1>Contacts</h1>
+        @if(selectedContact) {
+        <img
+          class="arrow_left"
+          src="assets/img/icons/arrow_left.svg"
+          (click)="selectContact(selectedContact); mobileDisplay()"
+        />
+        }
+      </div>
 
-    <!-- @for (item of contactService.contactList; track $index) {
+      <img src="assets/img/icons/or_icon.svg" />
+      <p>Better with a team</p>
+      <div class="border_blue"></div>
+    </div>
+    @if(selectedContact) {
+    <!-- <img class="arrow_left" src="assets/img/icons/arrow_left.svg" (click)="selectContact(selectedContact); mobileDisplay()"> -->
+    <div class="contact_content" [ngClass]="{ show: showContactContent }">
+      <div class="contact_content_head">
+        <div
+          class="contact_profile_badge"
+          [ngStyle]="{
+            'background-color': getBadgeColor(
+              getIndexInFullList(selectedContact)
+            )
+          }"
+        >
+          {{ selectedContactInitials }}
+        </div>
+        <div class="contact_name_section">
+          <p class="name">{{ selectedContact.name }}</p>
+          <div class="editing_section">
+            <!-- <div (click)="updateContact()" class="edit"> -->
+            <div (click)="openOverlay('edit')" class="edit">
+              <img class="pencil_icon" src="assets/img/icons/pencil_icon.svg" />
+              <img
+                class="pencil_icon_hover_blue"
+                src="assets/img/icons/pencil_icon_hover_blue.svg"
+              />
+              <p>Edit</p>
+            </div>
+
+            <div (click)="deleteContact()" class="delete">
+              <img class="trash_icon" src="assets/img/icons/trash_icon.svg" />
+              <img
+                class="trash_icon_hover_blue"
+                src="assets/img/icons/trash_icon_hover_blue.svg"
+              />
+              <p>Delete</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="contact_detail_section">
+        <p class="information_headline">Contact Information</p>
+        <div class="information">
+          <p class="email_headline">Email</p>
+          <p class="email">{{ selectedContact.email }}</p>
+          <p class="phone_headline">Phone</p>
+          <p class="phone">{{ selectedContact.phone }}</p>
+        </div>
+      </div>
+    </div>
+    }
+  </div>
+
+  <!-- @for (item of contactService.contactList; track $index) {
   <p>{{ item.name }}</p>
   <p>{{ item.email }}</p>
   <p>{{ item.phone }}</p>
   } -->
 
-    <!-- <input [(ngModel)]="name" type="text" />
+  <!-- <input [(ngModel)]="name" type="text" />
   <input [(ngModel)]="email" type="text" />
   <input [(ngModel)]="phone" type="text" /> -->
-    <!-- <button (click)="addContactList()">Neuer Kontakt</button> -->
-    <!-- <button (click)="getList(); getList2()">List ausgeben</button> -->
+  <!-- <button (click)="addContactList()">Neuer Kontakt</button> -->
+  <!-- <button (click)="getList(); getList2()">List ausgeben</button> -->
 </section>
 
 <app-overlay></app-overlay>
