add animations + hover effects + contact created popup

--- a/src/app/main/content/contacts/contacts.component.html
+++ b/src/app/main/content/contacts/contacts.component.html
@@ -121,3 +121,10 @@
 </section>
 
 <app-overlay></app-overlay>
+
+@if (showSuccessMessage) {
+  <div class="success-message">
+    Contact successfully created
+  </div>
+}
+
