added: navigation link to burger menu

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -19,9 +19,18 @@
       class="header_overlay"
     >
       <div class="inner_overlay">
-        <a class="burger_help_link" href="">Help</a>
-        <a href="">Legal Notice</a>
-        <a href="">Privacy Policy</a>
+
+        <a class="burger_help_link" 
+        [ngClass]="{ active: navigationService.selectedItem === 6 }"
+          (click)="selectItem(6)">Help</a>
+
+        <a  [ngClass]="{ active: navigationService.selectedItem === 5 }"
+            (click)="selectItem(5)">Legal Notice</a>
+
+        <a 
+        [ngClass]="{ active: navigationService.selectedItem === 4 }"
+          (click)="selectItem(4)">Privacy Policy</a>
+
         <a href="">Log out</a>
       </div>
     </div>
