--- a/src/app/main/content/contacts/contacts.component.scss
+++ b/src/app/main/content/contacts/contacts.component.scss
@@ -365,7 +365,7 @@ section {
     }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1024px) {
     section {
         @include dFlex($ai: flex-start);
         width: 100%;
@@ -419,13 +419,17 @@ section {
         border: 1px solid;
         border-color: $light_blue;
         border-radius: 50%;
-        background-color: $light_blue;
+        background-color: $dark_blue;
         height: 56px;
         width: 56px;
         position: absolute;
         bottom: 20px;
         right: 20px;
         z-index: 10;
+
+        &:hover {
+            background-color: $light_blue;
+        }
     }
 
     .contact-list {
@@ -435,6 +439,22 @@ section {
             .add-new-contact {
                 display: none;
             }
+
+                        .single-contact {
+                            .single-contact-container {
+                                .info {
+            
+                                    >p {
+                                        @include font($fs: 16px, $fw: 400);
+                                        background-color: transparent;
+                                    }
+            
+                                    .email {
+                                        @include font($fs: 16px, $fw: 400);
+                                    }
+                                }
+                            }
+                        }
         }
     }
 
@@ -481,6 +501,7 @@ section {
     }
 }
 
+/* Norman */
 .success-message {
     position: fixed;
     bottom: 400px;
