--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,8 +18,8 @@ body {
 
 .content_max {
   max-width: 1920px;
-  margin-left: auto;
-  margin-right: auto;
+  // margin-left: auto;
+  // margin-right: auto;
 }
 
 a {
