back button incorporated in the Help section

--- a/src/app/shared/help/help.component.html
+++ b/src/app/shared/help/help.component.html
@@ -1,7 +1,7 @@
 <section>
     <div class="help_header">
         <h1>Help</h1>
-        <a href=""></a>
+        <a (click)="selectItem(navigationService.getSelectedItem())"></a>
     </div>
     <div class="help_content">
         <span class="help_paragraph">
